GitHub Version Tag to set Version within Rosalution and Changelog (#133)
* Updating Rosalution to use the build tag in the title

* Forgot to restore the original chagnes to the regular local deployment.

* Created a changelog to be used going forward for features and bug fixes

* Made the commenting out consistent

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./frontend/src:/app/src
+    environment:
+      VITE_ROSALUTION_VERSION: "local@latest"
     networks:
       - rosalution-network
     labels:
