--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,18 @@
-fastapi==0.74.1
-uvicorn[standard]==0.22.0
+fastapi[all]==0.103.1
+uvicorn[standard]==0.23.2
 python-cas==1.6.0
 itsdangerous==2.1.2
-pymongo==4.3.3
-jq==1.4.0
+pymongo==4.5.0
+jq==1.6.0
 
-python-multipart==0.0.5
+python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib==1.7.4
 bcrypt==4.0.1
 
 # dev
 pytest-cov==4.0.0
-pytest==7.2.1
-pylint==2.15.10
-requests==2.28.2
-yapf==0.32.0
+pytest==7.4.2
+pylint==3.0.0
+requests==2.31.0
+yapf==0.40.2
