Upgraded Rosalution NodeJS subprojects in the frontend code base and system tests; migrating to actively using Node 20.8 with alpine 3.18.  Upgraded Vitest test cli and dependencies along with cypress

--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -13,10 +13,10 @@ jobs:
       run: |
         sh setup.sh
     - name: Cypress tests
-      uses: cypress-io/github-action@v5
+      uses: cypress-io/github-action@v6
       with:
         working-directory: system-tests
-        browser: electron
+        browser: chrome
         headed: false
         start: docker compose up --build -d
         wait-on: 'http://local.rosalution.cgds'
