--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,25 +15,25 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.2.1",
-    "@fortawesome/free-regular-svg-icons": "6.2.1",
-    "@fortawesome/free-solid-svg-icons": "6.2.1",
-    "@fortawesome/vue-fontawesome": "3.0.2",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-regular-svg-icons": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
+    "@fortawesome/vue-fontawesome": "3.0.3",
     "@rollup/plugin-strip": "3.0.2",
-    "vue": "3.2.45",
-    "vue-router": "4.1.6"
+    "vue": "3.3.4",
+    "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "4.3.4",
-    "@vitest/coverage-c8": "0.27.2",
-    "@vitest/ui": "0.27.2",
+    "@vitejs/plugin-vue": "4.4.0",
+    "@vitest/coverage-v8": "0.34.6",
+    "@vitest/ui": "0.34.6",
     "@vue/test-utils": "2.4.1",
-    "eslint": "8.32.0",
+    "eslint": "8.50.0",
     "eslint-config-google": "0.14.0",
-    "eslint-plugin-vue": "9.9.0",
-    "happy-dom": "6.0.4",
-    "sinon": "15.0.1",
-    "vite": "4.4.9",
-    "vitest": "0.27.2"
+    "eslint-plugin-vue": "9.17.0",
+    "happy-dom": "12.8.0",
+    "sinon": "16.0.0",
+    "vite": "4.4.10",
+    "vitest": "0.34.6"
   }
 }
