--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -419,8 +419,7 @@ disable=useless-return,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
-        use-symbolic-message-instead,
-        duplicate-code
+        use-symbolic-message-instead
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
