removed the original staging yml and changed the production yml to be staging with tls

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -39,6 +39,7 @@ services:
 networks:
   rosalution-network:
     name: rosalution-network-dev
+    external: true
   traefik:
     name: traefik-public
     external: true
