--- a/.github/workflows/development-main-deployment.yml
+++ b/.github/workflows/development-main-deployment.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy Production Rosalution Build to Developer DevOps Server
-        run: sudo -E docker stack deploy --prune --with-registry-auth --compose-file docker-compose.staging.yml rosalution-prod
+        run: sudo -E docker stack deploy --with-registry-auth --compose-file docker-compose.staging.yml rosalution-prod
