--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,9 +6,8 @@ pymongo==4.6.3
 jq==1.6.0
 
 python-multipart==0.0.7
-python-jose[cryptography]==3.3.0
-passlib==1.7.4
-bcrypt==4.0.1
+PyJWT[crypto]==2.8.0
+passlib[bcrypt]==1.7.4
 
 # dev
 pytest-cov==4.0.0
