--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "rosalution-frontend",
   "license": "MIT",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "build": "vite build",
     "dev": "vite",
@@ -19,24 +20,21 @@
     "@fortawesome/free-regular-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/vue-fontawesome": "3.0.3",
-    "@rollup/plugin-strip": "3.0.2",
+    "@rollup/plugin-strip": "3.0.4",
     "vue": "3.3.4",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "4.4.0",
-    "@vitest/coverage-v8": "0.34.6",
-    "@vitest/ui": "0.34.6",
+    "@vitejs/plugin-vue": "5.0.5",
+    "@vitest/coverage-v8": "1.6.0",
+    "@vitest/ui": "1.6.0",
     "@vue/test-utils": "2.4.1",
     "eslint": "8.50.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-vue": "9.17.0",
-    "happy-dom": "12.8.0",
+    "happy-dom": "14.12.3",
     "sinon": "16.0.0",
-    "vite": "4.5.3",
-    "vitest": "0.34.6"
-  },
-  "resolutions": {
-      "braces": "3.0.3"
+    "vite": "5.3.2",
+    "vitest": "1.6.0"
   }
 }
