--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,8 @@ services:
     volumes:
       - ./etc/fixtures/initial-seed/initial-db-seed.sh:/docker-entrypoint-initdb.d/initial-db-seed.sh
       - ./etc/fixtures/:/tmp/fixtures
+    ports:
+      - 27017:27017
     networks:
       - rosalution-network
     environment:
