work in progress for upgrading versions; unit tests are failling for an unknown reason, am investigating

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ rosalution-annotation-log.txt*
 *.graphql
 
 **/node_modules/**
+**/.vite/**
 
 # e2e run captures
 /system-tests/cypress/downloads
