--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Local Development Stage
-FROM python:3.11-slim-bookworm as development-stage
+FROM python:3.11-slim-bookworm AS development-stage
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
@@ -7,7 +7,7 @@ COPY ./src /app/src
 ENTRYPOINT ["/bin/sh", "-c", "uvicorn src.main:app --host 0.0.0.0 --port 8000 --log-level info --reload"]
 
 # Production Build Stage
-FROM python:3.11-slim-bookworm as production-stage
+FROM python:3.11-slim-bookworm AS production-stage
 WORKDIR /app
 COPY logging.conf /app/logging.conf
 COPY requirements.txt /app/requirements.txt
