wip with fixing the config a bit for gnomad and added the css to make that row be horizontal

--- a/etc/fixtures/initial-seed/annotations-config.json
+++ b/etc/fixtures/initial-seed/annotations-config.json
@@ -27,7 +27,7 @@
     "genomic_unit_type": "hgvs_variant",
     "annotation_source_type": "http",
     "url": "https://rest.ensembl.org/vep/human/hgvs/{hgvs_variant_without_transcript_version}?content-type=application/json;refseq=1;vcf_string=1;",
-    "attribute": ".[] | .vcf_string",
+    "attribute": ".[] | {\"ensembl_vep_vcf_string\": .vcf_string} ",
     "versioning_type": "rest",
     "dependencies": ["hgvs_variant_without_transcript_version"],
     "version_url": "https://rest.ensembl.org/info/data/?content-type=application/json",
@@ -233,9 +233,9 @@
     "data_source": "Rosalution",
     "genomic_unit_type": "gene",
     "annotation_source_type": "forge",
-    "base_string": "https://gnomad.broadinstitute.org/gene/{ensembl_vep_vcf_string}?dataset=gnomad_r4",
+    "base_string": "https://gnomad.broadinstitute.org/variant/{ensembl_vep_vcf_string}?dataset=gnomad_r4",
     "attribute": "{ \"gnomAD_variant_url\": .gnomAD_variant_url }",
-    "dependencies": ["Ensembl Gene Id"],
+    "dependencies": ["ensembl_vep_vcf_string"],
     "versioning_type": "rosalution"
   },
   {
@@ -606,7 +606,7 @@
     "genomic_unit_type": "hgvs_variant",
     "annotation_source_type": "http",
     "url": "https://rest.ensembl.org/vep/human/hgvs/{hgvs_variant_without_transcript_version}?content-type=application/json;CADD=1;refseq=1;vcf_string=1;",
-    "attribute": ".[] | .vcf_string | split(\"-\") | \"chrom=chr\" + .[0] + \"&pos=\" + .[1] + \"&ref_base=\" + .[2] + \"&alt_base=\" + .[3] ",
+    "attribute": ".[] | .vcf_string | split(\"-\") | \"chrom=chr\" + .[0] + \"&pos=\" + .[1] + \"&ref_base=\" + .[2] + \"&alt_base=\" + .[3] | {\"opencravat_search_variant_vcf_string\": . }",
     "versioning_type": "rest",
     "dependencies": ["hgvs_variant_without_transcript_version"],
     "version_url": "https://rest.ensembl.org/info/data/?content-type=application/json",
